# mentor_project

./: .env.example  .flake8  .gitignore  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: .project  manage.py
src/.dbeaver/: .credentials-config.json.bak  credentials-config.json  data-sources.json  project-settings.json
src/apps/accounts/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
src/apps/admin/: apps.py  forms.py  urls.py  utils.py  validators.py  views.py
src/apps/api/: permissions.py  urls.py
src/apps/blog/: forms.py  models.py  urls.py  utils.py  views.py
src/apps/landing/: apps.py  forms.py  models.py  utils.py
src/apps/social/: pipelines.py
src/config/: app.py  urls.py
src/media/avatars/: vova.jfif
src/settings/: base.py
src/static/css/: admin_styles.css  landing.css  list_users.css  side_bar.css  styles.css  user.css
src/templates/: 403.html  base.html  base_.html  base_admin.html  home.html  sidebar.html
src/templates/accounts/: login.html  profile.html
src/templates/admin/: admin_login.html  category_create.html  category_edit.html  create_article.html  create_user.html  edit_article.html  edit_user.html  list_articles.html  list_categories.html  list_users.html
src/templates/blog/: card_article.html  card_author.html  comments.html  detail.html  list.html  tags.html
src/templates/landing/: about_me_create.html  aboutme.html  contents.html  create_about_me.html  delete_about_me.html  edit_about_me.html  home1.html  maininf.html  products.html
src/tests/: conftest.py
(+133 files in other folders)
