[tool.poetry]
name = "sysmind-mentor-proj"
version = "0.1.0"
description = ""
authors = ["sonya <sonyakarm@icloud.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "3.12.7"
django = "4.2.16"
djangorestframework = "3.15.2"
poetry = "1.8.4"
celery = "5.4.0"
redis = "5.2.0"
python-dotenv = "1.0.1"
psycopg2-binary = "2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
