[tool.poetry]
name = "sysmind-mentor-proj"
version = "0.1.0"
description = ""
authors = ["sonya <sonyakarm@icloud.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "3.12.7"
django = "4.2.16"
djangorestframework = "3.15.2"
poetry = "1.8.4"
celery = "5.4.0"
redis = "5.2.0"
python-dotenv = "1.0.1"
psycopg2-binary = "2.9.10"
pillow = "11.0.0"
social-auth-app-django = "^5.4.2"
pytest-django = "4.9.0"
pytest-cov = "6.0.0"
drf-spectacular = "0.28.0"
django-filter = "24.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
black = "^24.10.0"
flake8 = "^7.1.1"

[tool.black]
line-length = 100  # максимальная длина длина строки
skip-string-normalization = false  # переводит одинарные кавычки в двойные

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
